// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PluginListItem should render 1`] = `
<DocumentFragment>
  <div>
    <table>
      <tbody>
        <tr
          class="TableRow__TableRowStyled-sc-1br46dw-0 dfrDYk group"
          data-testid="TableRow"
        >
          <td
            class="w-20"
          >
            <div
              class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 dlRuyJ"
            >
              <div
                class="w-15 h-15 flex items-center justify-center"
              >
                <div
                  class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jNRfPD rounded"
                  data-testid="Avatar"
                >
                  <div
                    class="w-full h-full"
                  >
                    <img
                      alt="ark-explorer"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"45\\" cx=\\"10\\" cy=\\"60\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"35\\" cx=\\"40\\" cy=\\"70\\" fill=\\"rgb(233, 30, 99)\\"/></svg>"
                      title="ark-explorer"
                    />
                  </div>
                </div>
              </div>
            </div>
          </td>
          <td>
            <div
              class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 dBYoWL space-x-2"
            >
              <a
                class="font-semibold link"
                href="/"
              >
                ARK Explorer
              </a>
            </div>
          </td>
          <td>
            <div
              class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 dBYoWL pr-16"
            >
              <span>
                ARK.io
              </span>
            </div>
          </td>
          <td>
            <div
              class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 dBYoWL"
            >
              <span>
                Utility
              </span>
            </div>
          </td>
          <td>
            <div
              class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 dBYoWL"
            >
              <span>
                v1.3.8
              </span>
            </div>
          </td>
          <td>
            <div
              class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 dBYoWL"
            >
              <span>
                4.2 MB
              </span>
            </div>
          </td>
          <td>
            <div
              class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 dBYoWL"
            >
              <div
                class="mx-auto flex items-center justify-center w-6 h-6 text-theme-neutral"
              >
                <div
                  class="sc-gsTCUz cXMmJt"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    dash.svg
                  </svg>
                </div>
              </div>
            </div>
          </td>
          <td
            class="w-16"
          >
            <div
              class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kGFkbp justify-end"
            >
              <button
                class="Button__StyledButton-mdtvtf-0 bHPNtZ"
                data-testid="PluginListItem__install"
                type="button"
              >
                Install
              </button>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`PluginListItem should render grant icon 1`] = `
<DocumentFragment>
  <div>
    <table>
      <tbody>
        <tr
          class="TableRow__TableRowStyled-sc-1br46dw-0 dfrDYk group"
          data-testid="TableRow"
        >
          <td
            class="w-20"
          >
            <div
              class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 dlRuyJ"
            >
              <div
                class="w-15 h-15 flex items-center justify-center"
              >
                <div
                  class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jNRfPD rounded"
                  data-testid="Avatar"
                >
                  <div
                    class="w-full h-full"
                  >
                    <img
                      alt="ark-explorer"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"45\\" cx=\\"10\\" cy=\\"60\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"35\\" cx=\\"40\\" cy=\\"70\\" fill=\\"rgb(233, 30, 99)\\"/></svg>"
                      title="ark-explorer"
                    />
                  </div>
                </div>
              </div>
            </div>
          </td>
          <td>
            <div
              class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 dBYoWL space-x-2"
            >
              <a
                class="font-semibold link"
                href="/"
              >
                ARK Explorer
              </a>
              <div
                class="sc-gsTCUz bVDqPu"
                height="20"
                width="14"
              >
                <svg>
                  grant.svg
                </svg>
              </div>
            </div>
          </td>
          <td>
            <div
              class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 dBYoWL pr-16"
            >
              <span>
                ARK.io
              </span>
            </div>
          </td>
          <td>
            <div
              class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 dBYoWL"
            >
              <span>
                Utility
              </span>
            </div>
          </td>
          <td>
            <div
              class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 dBYoWL"
            >
              <span>
                v1.3.8
              </span>
            </div>
          </td>
          <td>
            <div
              class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 dBYoWL"
            >
              <span>
                4.2 MB
              </span>
            </div>
          </td>
          <td>
            <div
              class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 dBYoWL"
            >
              <div
                class="mx-auto flex items-center justify-center w-6 h-6 text-theme-neutral"
              >
                <div
                  class="sc-gsTCUz cXMmJt"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    dash.svg
                  </svg>
                </div>
              </div>
            </div>
          </td>
          <td
            class="w-16"
          >
            <div
              class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kGFkbp justify-end"
            >
              <button
                class="Button__StyledButton-mdtvtf-0 bHPNtZ"
                data-testid="PluginListItem__install"
                type="button"
              >
                Install
              </button>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`PluginListItem should render official icon 1`] = `
<DocumentFragment>
  <div>
    <table>
      <tbody>
        <tr
          class="TableRow__TableRowStyled-sc-1br46dw-0 dfrDYk group"
          data-testid="TableRow"
        >
          <td
            class="w-20"
          >
            <div
              class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 dlRuyJ"
            >
              <div
                class="w-15 h-15 flex items-center justify-center"
              >
                <div
                  class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jNRfPD rounded"
                  data-testid="Avatar"
                >
                  <div
                    class="w-full h-full"
                  >
                    <img
                      alt="ark-explorer"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"45\\" cx=\\"10\\" cy=\\"60\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"35\\" cx=\\"40\\" cy=\\"70\\" fill=\\"rgb(233, 30, 99)\\"/></svg>"
                      title="ark-explorer"
                    />
                  </div>
                </div>
              </div>
            </div>
          </td>
          <td>
            <div
              class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 dBYoWL space-x-2"
            >
              <a
                class="font-semibold link"
                href="/"
              >
                ARK Explorer
              </a>
              <div
                class="sc-gsTCUz byDVwN"
                height="18"
                width="18"
              >
                <svg>
                  official-ark-plugin.svg
                </svg>
              </div>
            </div>
          </td>
          <td>
            <div
              class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 dBYoWL pr-16"
            >
              <span>
                ARK.io
              </span>
            </div>
          </td>
          <td>
            <div
              class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 dBYoWL"
            >
              <span>
                Utility
              </span>
            </div>
          </td>
          <td>
            <div
              class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 dBYoWL"
            >
              <span>
                v1.3.8
              </span>
            </div>
          </td>
          <td>
            <div
              class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 dBYoWL"
            >
              <span>
                4.2 MB
              </span>
            </div>
          </td>
          <td>
            <div
              class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 dBYoWL"
            >
              <div
                class="mx-auto flex items-center justify-center w-6 h-6 text-theme-neutral"
              >
                <div
                  class="sc-gsTCUz cXMmJt"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    dash.svg
                  </svg>
                </div>
              </div>
            </div>
          </td>
          <td
            class="w-16"
          >
            <div
              class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kGFkbp justify-end"
            >
              <button
                class="Button__StyledButton-mdtvtf-0 bHPNtZ"
                data-testid="PluginListItem__install"
                type="button"
              >
                Install
              </button>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`PluginListItem should trigger delete 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-1br46dw-0 dfrDYk group"
        data-testid="TableRow"
      >
        <td
          class="w-20"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 dlRuyJ"
          >
            <svg
              class="w-15 h-15"
            >
              changenow-logo.svg
            </svg>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 dBYoWL space-x-2"
          >
            <a
              class="font-semibold link"
              href="/"
            >
              ARK Explorer
            </a>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 dBYoWL pr-16"
          >
            <span>
              ARK.io
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 dBYoWL"
          >
            <span>
              Utility
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 dBYoWL"
          >
            <div
              class="flex"
              data-testid="ReviewRating"
            >
              <div
                class="relative my-auto"
              >
                <div
                  class="overflow-hidden absolute"
                  style="width: 80%;"
                >
                  <svg
                    class="text-theme-warning-400 w-3"
                  >
                    star.svg
                  </svg>
                </div>
                <svg
                  class="text-theme-neutral w-3"
                >
                  star.svg
                </svg>
              </div>
              <span
                class="leading-tight my-auto ml-1 {{ $ratingClass ?? '' }}"
              >
                4.2
              </span>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 dBYoWL"
          >
            <span>
              v 1.3.8
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 dBYoWL"
          >
            <span>
              4.2 MB
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 dBYoWL"
          >
            <div
              class="flex mx-auto w-6 h-6 rounded-full border-2 border-theme-success-200 text-theme-success-500"
            >
              <div
                class="m-auto"
              >
                <div
                  class="sc-bdfBwQ dfWOLJ"
                  height="15"
                  width="15"
                >
                  <svg>
                    checkmark.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td
          class="w-16"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kGFkbp justify-end"
          >
            <div
              class="relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <button
                  class="Button-mdtvtf-0 eXKKLD text-left"
                  type="button"
                >
                  <div
                    class="sc-bdfBwQ iyevwF"
                    height="20"
                    width="20"
                  >
                    <svg>
                      settings.svg
                    </svg>
                  </div>
                </button>
              </span>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`PluginListItem should trigger install 1`] = `
<DocumentFragment>
  <div>
    <table>
      <tbody>
        <tr
          class="TableRow__TableRowStyled-sc-1br46dw-0 dfrDYk group"
          data-testid="TableRow"
        >
          <td
            class="w-20"
          >
            <div
              class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 dlRuyJ"
            >
              <div
                class="w-15 h-15 flex items-center justify-center"
              >
                <div
                  class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jNRfPD rounded"
                  data-testid="Avatar"
                >
                  <div
                    class="w-full h-full"
                  >
                    <img
                      alt="ark-explorer"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"45\\" cx=\\"10\\" cy=\\"60\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"35\\" cx=\\"40\\" cy=\\"70\\" fill=\\"rgb(233, 30, 99)\\"/></svg>"
                      title="ark-explorer"
                    />
                  </div>
                </div>
              </div>
            </div>
          </td>
          <td>
            <div
              class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 dBYoWL space-x-2"
            >
              <a
                class="font-semibold link"
                href="/"
              >
                ARK Explorer
              </a>
            </div>
          </td>
          <td>
            <div
              class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 dBYoWL pr-16"
            >
              <span>
                ARK.io
              </span>
            </div>
          </td>
          <td>
            <div
              class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 dBYoWL"
            >
              <span>
                Utility
              </span>
            </div>
          </td>
          <td>
            <div
              class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 dBYoWL"
            >
              <span>
                v1.3.8
              </span>
            </div>
          </td>
          <td>
            <div
              class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 dBYoWL"
            >
              <span>
                4.2 MB
              </span>
            </div>
          </td>
          <td>
            <div
              class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 dBYoWL"
            >
              <div
                class="mx-auto flex items-center justify-center w-6 h-6 text-theme-neutral"
              >
                <div
                  class="sc-gsTCUz cXMmJt"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    dash.svg
                  </svg>
                </div>
              </div>
            </div>
          </td>
          <td
            class="w-16"
          >
            <div
              class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kGFkbp justify-end"
            >
              <button
                class="Button__StyledButton-mdtvtf-0 bHPNtZ"
                data-testid="PluginListItem__install"
                type="button"
              >
                Install
              </button>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;
